fix some crashes and make de api call works

--- a/gradle.properties
+++ b/gradle.properties
@@ -20,4 +20,4 @@ android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
 
-MyTheMovieDBApiToken="YOUR_API"
+MyTheMovieDBApiToken="6ace087f63cbc070cd689d31901753ac"
