--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,9 +4,10 @@ plugins {
     id("com.android.application")
     id("kotlin-android")
     id("kotlin-android-extensions")
+
     id("kotlin-kapt")
     id("androidx.navigation.safeargs.kotlin")
-    id("io.fabric")
+//    id("io.fabric")
     id("com.google.gms.google-services")
 }
 
@@ -15,7 +16,7 @@ android {
     buildToolsVersion "29.0.0"
     defaultConfig {
         applicationId "com.example.themoviedb"
-        minSdkVersion 26
+        minSdkVersion 16
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
@@ -33,6 +34,10 @@ android {
     }
     buildTypes.each {
         it.buildConfigField 'String', 'THE_MOVIE_DB_API_TOKEN', MyTheMovieDBApiToken
+    }
+    compileOptions {
+        targetCompatibility = "8"
+        sourceCompatibility = "8"
     }
 }
 
@@ -91,7 +96,7 @@ dependencies {
 
     // firebase
     implementation("com.google.firebase:firebase-analytics:17.2.1")
-    implementation("com.crashlytics.sdk.android:crashlytics:2.10.1")
+//    implementation("com.crashlytics.sdk.android:crashlytics:2.10.1")
 
     // unit test
     testImplementation("junit:junit:4.12")
