--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ buildscript {
         // in the individual module build.gradle files
         classpath("androidx.navigation:navigation-safe-args-gradle-plugin:2.2.0-rc03")
         classpath("com.google.gms:google-services:4.3.3")
-        classpath("io.fabric.tools:gradle:1.31.2")
+//        classpath("io.fabric.tools:gradle:1.31.2")
     }
 }
 
