--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,6 @@ plugins {
 
     id("kotlin-kapt")
     id("androidx.navigation.safeargs.kotlin")
-//    id("io.fabric")
     id("com.google.gms.google-services")
 }
 
@@ -74,7 +73,7 @@ dependencies {
     // Kotlin Extensions and Coroutines support for Room
     implementation("androidx.room:room-ktx:2.2.2")
 
-    // navigation
+    // Navigation
     implementation("androidx.navigation:navigation-runtime-ktx:2.2.0-rc03")
     implementation("androidx.navigation:navigation-fragment-ktx:2.2.0-rc03")
     implementation("androidx.navigation:navigation-ui-ktx:2.2.0-rc03")
