--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,20 +24,23 @@
 
         <activity
             android:name=".activities.MainActivity"
+            android:theme="@style/AppTheme.NoActionBar"
             android:label="@string/app_name">
         </activity>
 
         <activity
             android:name=".activities.DetailActivity"
+            android:theme="@style/AppTheme.NoActionBar"
             android:label="@string/app_name"
-            android:parentActivityName=".activities.MainActivity"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:parentActivityName=".activities.MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".activities.MainActivity" />
         </activity>
 
-        <activity android:name=".activities.SettingsActivity"
+        <activity
+            android:name=".activities.SettingsActivity"
+            android:theme="@style/AppTheme.NoActionBar"
             android:label="Settings"/>
     </application>
 
